--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -25,6 +25,30 @@
           "/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
         ]
       }
+    },
+    {
+      "name": "audio-assets",
+      "installMode": "lazy",
+      "updateMode": "prefetch",
+      "resources": {
+        "files": [
+          "/voices/*.mp3"
+        ]
+      }
+    }
+  ],
+  "dataGroups": [
+    {
+      "name": "app-data",
+      "urls": [
+        "/training-set/data.json"
+      ],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 100,
+        "maxAge": "1d",
+        "timeout": "5s"
+      }
     }
   ]
 }
