feat: add service worker configuration and update notification prompt imports

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -28,7 +28,7 @@
     },
     {
       "name": "audio-assets",
-      "installMode": "lazy",
+      "installMode": "prefetch",
       "updateMode": "prefetch",
       "resources": {
         "files": [
